Add title to game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <h1>Dead Men Tell No Tales</h1>
 </body>
 </html>
