Add script and css tags to head

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script rel="text/javascript" href="assets/javascript/game.js"></script>
 </head>
 <body>
     <h1>Dead Men Tell No Tales</h1>
+    
 </body>
 </html>
