--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script rel="text/javascript" href="assets/javascript/game.js"></script>
 </head>
 <body>
-    <h1>Dead Men Tell No Tales</h1>
+    <h1>Hangman</h1>
+    <h4>Dead Men Tell No Tales</h4>
     
 </body>
 </html>
