Test JS failure

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script rel="text/javascript" href="assets/javascript/game.js"></script>
+
 </head>
 <body>
     <h1>Hangman</h1>
     <h4>Dead Men Tell No Tales</h4>
-    
+    <div id="game-word">
+        
+    </div>
+    <script rel="text/javascript" href="assets/javascript/game.js"></script>
 </body>
 </html>
