--- a/index.html
+++ b/index.html
@@ -6,20 +6,68 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- Not sure if I really need to use Meyer reset -->
+    <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Hangman</h1>
-            <h4>Dead Men Tell No Tales</h4>
-
+        <div class="jumbotron-fluid background py-5">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-8 my-3">
+                    <h1>Hangman</h1>
+                    <h4>Dead Men Tell No Tales</h4>
+                </div>
+                <div class="col-12 col-md-4 my-3">
+                    <button id="btn btn-light start-game-button">
+                        <i class="fas fa-anchor"></i>
+                        Weigh Anchor, Ya Swab!
+                    </button>
+                </div>
+            </div>        
         </div>
-        <div id="game-word">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 text-center py-5" id="placeholder-section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-6 my-3">
+                               <h5>Can Ye Fill In This Word, Matey?
+                                   <br/>
+                                   <span id="word-blanks">_ _ _ _ _ _</span>
+                               </h5>     
+                            </div>
+                            <div class="col-12 col-md-6 my-3">
+                                <h5>These Ain't Right!
+                                    <br/>
+                                    <span id="guessed-letters"></span>
+                                </h5>
+                            </div>      
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-4 text-center py-5">
+                    <h5>
+                        Remainin' Guesses: <span id="remaining-guesses">0</span>
+                    </h5>
+                </div>
+                <div class="col-12 col-md-4 text-center py-5">
+                    <h5>
+                        Wins: <span id="wins">0</span>
+                    </h5>
+                </div>
+                <div class="col-12 col-md-4 text-center py-5">
+                    <h5>
+                        Losses: <span id="losses">0</span>
+                    </h5>
+                </div>
+            </div>
         </div>
+
     </div>
 
 
