--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <div class="col-12 col-md-6 my-3">
                                <h5>Can Ye Fill In This Word, Matey?
                                    <br/>
-                                   <span id="word-blanks">_ _ _ _ _ _</span>
+                                   <span id="word-blanks"></span>
                                </h5>     
                             </div>
                             <div class="col-12 col-md-6 my-3">
