Remove bootstrap IDs from start-game-button, add window.onload function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h4>Dead Men Tell No Tales</h4>
                 </div>
                 <div class="col-12 col-md-4 my-3">
-                    <button id="btn btn-light start-game-button">
+                    <button id="start-game-button">
                         <i class="fas fa-anchor"></i>
                         Weigh Anchor, Ya Swab!
                     </button>
