--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h4>Dead Men Tell No Tales</h4>
                 </div>
                 <div class="col-12 col-md-4 my-3">
-                    <button id="start-game-button">
+                    <button id="new-game-button">
                         <i class="fas fa-anchor"></i>
                         Weigh Anchor, Ya Swab!
                     </button>
@@ -29,19 +29,19 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 text-center py-5" id="placeholder-section">
+                <div class="col-12 text-center py-5" id="word-blanks-section">
                     <div class="container">
                         <div class="row">
                             <div class="col-12 col-md-6 my-3">
                                <h5>Can Ye Fill In This Word, Matey?
                                    <br/>
-                                   <span id="word-blanks"></span>
+                                   <span id="word-blanks">_ _ _ _ _ _</span>
                                </h5>     
                             </div>
                             <div class="col-12 col-md-6 my-3">
                                 <h5>These Ain't Right!
                                     <br/>
-                                    <span id="guessed-letters"></span>
+                                    <span id="wrong-letters"></span>
                                 </h5>
                             </div>      
                         </div>
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 text-center py-5">
                     <h5>
-                        Remainin' Guesses: <span id="remaining-guesses">0</span>
+                        Remainin' Guesses: <span id="guesses-left">0</span>
                     </h5>
                 </div>
                 <div class="col-12 col-md-4 text-center py-5">
