--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="background">
         <div class="jumbotron-fluid background py-5">
             <div class="row align-items-center">
                 <div class="col-12 col-md-8 my-3">
