--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div class="jumbotron-fluid background py-5">
             <div class="row align-items-center">
                 <div class="col-12 col-md-8 my-3">
-                    <h1>Hangman</h1>
-                    <h4>Dead Men Tell No Tales</h4>
+                    <img src="assets/images/hangmanlogo.svg" alt="Hangman">
                 </div>
                 <div class="col-12 col-md-4 my-3">
                     <button id="new-game-button">
